--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,13 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
 [*]
-end_of_line = lf
 charset = utf-8
 indent_style = space
 indent_size = 4
-
+tab_width = 4
+end_of_line = lf
+insert_final_newline = false
+trim_trailing_whitespace = true
 
 [*.{json}]
 indent_style = space
